# signalhunter

./: .env.example  .gitignore  Signal Hunter.md
.claude/: launch.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3451f586b06c_initial_schema.py  b09f2416852d_add_signal_fingerprint_column.py
backend/app/: config.py  db.py  deps.py  main.py
backend/app/api/: __init__.py  events.py  feed.py  health.py  signals_api.py
backend/app/core/: __init__.py  pipeline.py  synthesis.py
backend/app/models/: __init__.py  event.py  forecast.py  implication.py  signal.py  source.py  types.py  world_state.py
backend/app/sensors/: __init__.py  base.py  kalshi.py  polymarket.py  price_feed.py  scheduler.py
backend/app/services/: __init__.py  cache.py  claude.py
backend/app/signals/: __init__.py  base.py  prediction_market.py  registry.py
backend/tests/: conftest.py
backend/tests/unit/: test_detectors.py  test_models.py  test_pipeline.py  test_price_feed.py  test_sensors.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/events/: page.tsx
frontend/src/app/signals/: page.tsx
frontend/src/app/status/: page.tsx
frontend/src/lib/: api.ts  types.ts
